@@ -124,6 +124,8 @@ S3method(sort_desc,data.frame)
 S3method(sort_desc,default)
 S3method(sort_desc,list)
 S3method(sort_desc,matrix)
+S3method(to_labelled,default)
+S3method(to_labelled,list)
 S3method(unlab,data.frame)
 S3method(unlab,default)
 S3method(unlab,list)
